/*
 * Copyright (C) 2024 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package profiler.proto;
option java_package = "com.android.tools.profiler.proto";
option java_outer_classname = "LeakCanary";

/** LeakCanary information in logcat */
message LeakCanaryLogcatData {
  string logcat_message = 1;
}

/** LeakCanary event information */
message LeakCanaryLogcatInfo {
  oneof union {
    LeakCanaryLogcatStarted logcat_started = 1;
    LeakCanaryLogcatEnded logcat_ended = 2;
  }
}

message LeakCanaryLogcatStarted {
  int64 timestamp = 1;
}

message LeakCanaryLogcatEnded {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    SUCCESS = 1;
    FAILURE = 2;
  }

  Status status = 1;
  int64 start_timestamp = 2;
  int64 end_timestamp = 3;
}